--- a/WeClean/Views/Services/Disinfection.cshtml
+++ b/WeClean/Views/Services/Disinfection.cshtml
@@ -30,15 +30,15 @@
                                 <div class="services-single-block col-lg-6 col-md-6 col-xs-12">
                                     <div class="inner-box">
                                         <div class="image">
-                                            <img src="/images/resource/services-7.jpg" alt="" />
+                                            <img src="/images/resource/disinfectionimg3.jpg" alt="" />
                                             <div class="overlay-box">
                                                 <div class="overlay-inner">
                                                     <div class="content">
-                                                        <h3><a href="case-single.html">Grout Cleaning</a></h3>
+                                                        <h3><a asp-area="" asp-controller="Home" asp-action="Contact">Home and Office Disinfections</a></h3>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <a href="#" class="case-studies">Case Studies</a>
+                                            <a asp-area="" asp-controller="Home" asp-action="Contact" class="case-studies">Contact us</a>
                                         </div>
                                     </div>
                                 </div>
@@ -47,15 +47,15 @@
                                 <div class="services-single-block col-lg-6 col-md-6 col-xs-12">
                                     <div class="inner-box">
                                         <div class="image">
-                                            <img src="/images/resource/services-8.jpg" alt="" />
+                                            <img src="/images/resource/disinfection3.jpg" alt="" />
                                             <div class="overlay-box">
                                                 <div class="overlay-inner">
                                                     <div class="content">
-                                                        <h3><a href="case-single.html">Grout Cleaning</a></h3>
+                                                        <h3><a asp-area="" asp-controller="Home" asp-action="Contact">Schools Disenfiction</a></h3>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <a href="#" class="case-studies">Case Studies</a>
+                                            <a asp-area="" asp-controller="Home" asp-action="Contact" class="case-studies">Contact us</a>
                                         </div>
                                     </div>
                                 </div>
