--- a/WeClean/Views/Services/HouseKeeping.cshtml
+++ b/WeClean/Views/Services/HouseKeeping.cshtml
@@ -30,15 +30,15 @@
                                 <div class="services-single-block col-lg-6 col-md-6 col-xs-12">
                                     <div class="inner-box">
                                         <div class="image">
-                                            <img src="/images/resource/services-7.jpg" alt="" />
+                                            <img src="/images/resource/officeimg.jpg" alt="" />
                                             <div class="overlay-box">
                                                 <div class="overlay-inner">
                                                     <div class="content">
-                                                        <h3><a href="case-single.html">Grout Cleaning</a></h3>
+                                                        <h3><a asp-area="" asp-controller="Home" asp-action="About">Office Cleaning</a></h3>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <a href="#" class="case-studies">Case Studies</a>
+                                            <a asp-area="" asp-controller="Home" asp-action="About" class="case-studies">Contact Us</a>
                                         </div>
                                     </div>
                                 </div>
@@ -51,11 +51,11 @@
                                             <div class="overlay-box">
                                                 <div class="overlay-inner">
                                                     <div class="content">
-                                                        <h3><a href="case-single.html">Grout Cleaning</a></h3>
+                                                        <h3><a asp-area="" asp-controller="Home" asp-action="About">Home Cleaning</a></h3>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <a href="#" class="case-studies">Case Studies</a>
+                                            <a asp-area="" asp-controller="Home" asp-action="About" class="case-studies">Contact Us</a>
                                         </div>
                                     </div>
                                 </div>
