--- a/WeClean/Views/Services/WindowCleaning.cshtml
+++ b/WeClean/Views/Services/WindowCleaning.cshtml
@@ -33,15 +33,15 @@
                                 <div class="services-single-block col-lg-6 col-md-6 col-xs-12">
                                     <div class="inner-box">
                                         <div class="image">
-                                            <img src="/images/resource/services-7.jpg" alt="" />
+                                            <img src="/images/resource/windowimg.jpeg" alt="" />
                                             <div class="overlay-box">
                                                 <div class="overlay-inner">
                                                     <div class="content">
-                                                        <h3><a href="case-single.html">Grout Cleaning</a></h3>
+                                                        <h3><a asp-area="" asp-controller="Home" asp-action="Contact">Window Cleaning</a></h3>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <a href="#" class="case-studies">Case Studies</a>
+                                            <a asp-area="" asp-controller="Home" asp-action="Contact" class="case-studies">Contact us</a>
                                         </div>
                                     </div>
                                 </div>
@@ -50,15 +50,15 @@
                                 <div class="services-single-block col-lg-6 col-md-6 col-xs-12">
                                     <div class="inner-box">
                                         <div class="image">
-                                            <img src="/images/resource/services-8.jpg" alt="" />
+                                            <img src="/images/resource/windowimg2.jpg" alt="" />
                                             <div class="overlay-box">
                                                 <div class="overlay-inner">
                                                     <div class="content">
-                                                        <h3><a href="case-single.html">Grout Cleaning</a></h3>
+                                                        <h3><a asp-area="" asp-controller="Home" asp-action="Contact">Sparkle Clean</a></h3>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <a href="#" class="case-studies">Case Studies</a>
+                                            <a asp-area="" asp-controller="Home" asp-action="Contact" class="case-studies">Contact us</a>
                                         </div>
                                     </div>
                                 </div>
@@ -72,16 +72,6 @@
                         <p>
                             We can reach inaccessible windows and frames anything from Ground to Fourth floor from the safety of the ground. We have full liability cover for peace of mind for our customers.
                         </p>
-                        @*<ul class="list-style-two">
-                            <li>
-                                <strong>Our Tile And Grout Cleaning Equipment:</strong>  <br />
-                                When we clean tile and grout we use a high-pressure water and vacuum system along with a cleaning solution that doesn’t leave a residue.
-                            </li>
-                            <li>
-                                <strong>Cleaner And Healthier</strong>  <br />
-                                Our tile and grout cleaning process removes an average of 96% of common household allergens making use of eco-friendly products.
-                            </li>
-                        </ul>*@
                     </div>
                 </div>
             </div>
