--- a/WeClean/Views/Shared/_Layout.cshtml
+++ b/WeClean/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <link href="~/css/style.css" rel="stylesheet">
     <link href="~/css/responsive.css" rel="stylesheet">
 
-    <link rel="shortcut icon" href="~/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="~/images/resource/favicon.png" type="image/x-icon">
     <link rel="icon" href="~/images/favicon.png" type="image/x-icon">
 </head>
 <body>
@@ -36,7 +36,7 @@
                         </div>
                         <!--Top Right-->
                         <div class="top-right pull-right">
-                            <a href="#" class="mail-us"><span class="icon flaticon-interface-1"></span> Mail Us</a>
+                            <a href="mailto:info@cleanmate.co.za" class="mail-us"><span class="icon flaticon-interface-1"></span> Mail Us</a>
                             <!--Search Box-->
                             @*<div class="search-box-outer">
                                 <button class="search-box-btn dropdown" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="fa fa-search"></span></button>
@@ -65,7 +65,7 @@
                     <div class="clearfix">
 
                         <div class="pull-left logo-box">
-                            <div class="logo"><a href="#"><img src="~/images/logo.png" alt="" title=""></a></div>
+                            <div class="logo"><a asp-area="" asp-controller="Home" asp-action="About"><img src="~/images/finallogo.png" alt="" title=""></a></div>
                         </div>
 
                         <div class="pull-right upper-right clearfix">
@@ -144,10 +144,10 @@
                                 <div class="icon-outer">
                                     <span class="icon fa fa-phone"></span>
                                 </div>
-                                <span class="theme_color">Phone:</span> +0 789.0123.456
+                                <span class="theme_color">Phone:</span> +27815796814
                             </div>
                             <div class="appointment-box">
-                                <a href="#" class="theme-btn appointment-btn"><span class="icon flaticon-calendar-1"></span>Appointment</a>
+                                <a asp-area="" asp-controller="Home" asp-action="Contact" class="theme-btn appointment-btn"><span class="icon flaticon-calendar-1"></span>Booking</a>
                             </div>
 
                         </div>
@@ -160,7 +160,7 @@
                 <div class="auto-container clearfix">
                     <!--Logo-->
                     <div class="logo pull-left">
-                        <a href="#" class="img-responsive"><img src="images/logo-small.png" alt="" title=""></a>
+                        <a href="#" class="img-responsive"><img src="images/finallogo.png" alt="" title=""></a>
                     </div>
 
                     <!--Right Col-->
@@ -269,7 +269,7 @@
                                 <!--Footer Column-->
                                 <div class="footer-column col-md-6 col-sm-6">
                                     <div class="footer-widget links-widget">
-                                        <h2 class="alternate">+0 789.0123.456</h2>
+                                        <h2 class="alternate">+27815796814</h2>
                                         <ul class="contact-list">
                                             <li>info@cleanmate.co.za</li>
                                             <li>marketing@cleanmate.co.za</li>
@@ -295,7 +295,7 @@
                     <div class="clearfix">
 
                         <div class="logo-box">
-                            <a asp-area="" asp-controller="Home" asp-action="Index"><img src="images/footer-logo.png" alt="" /></a>
+                            <a asp-area="" asp-controller="Home" asp-action="Index"><img src="images/finallogo.png" alt="" /></a>
                         </div>
 
                         <div class="pull-left">
