--- a/WeClean/Views/Home/About.cshtml
+++ b/WeClean/Views/Home/About.cshtml
@@ -24,24 +24,25 @@
                 <div class="carousel-column col-lg-6 col-md-12 col-sm-12">
                     <div class="inner-column">
                         <div class="single-item-carousel owl-carousel owl-theme">
-
+                            
                             <div class="slide">
                                 <div class="image">
-                                    <img src="~/images/resource/image-1.jpg" alt="" />
+                                    <img src="/images/resource/aboutimg3.jpg" alt="" />
                                 </div>
                             </div>
 
                             <div class="slide">
                                 <div class="image">
-                                    <img src="~/images/resource/image-1.jpg" alt="" />
+                                    <img src="/images/resource/aboutimg2.jpg" alt="" />
                                 </div>
                             </div>
 
                             <div class="slide">
                                 <div class="image">
-                                    <img src="~/images/resource/image-1.jpg" alt="" />
+                                    <img src="/images/resource/aboutimg1.jpg" alt="" />
                                 </div>
                             </div>
+
 
                         </div>
                     </div>
