--- a/WeClean/Views/Services/TileCleaning.cshtml
+++ b/WeClean/Views/Services/TileCleaning.cshtml
@@ -34,15 +34,15 @@
                                 <div class="services-single-block col-lg-6 col-md-6 col-xs-12">
                                     <div class="inner-box">
                                         <div class="image">
-                                            <img src="/images/resource/services-7.jpg" alt="" />
+                                            <img src="/images/resource/tileimg.png" alt="" />
                                             <div class="overlay-box">
                                                 <div class="overlay-inner">
                                                     <div class="content">
-                                                        <h3><a href="case-single.html">Grout Cleaning</a></h3>
+                                                        <h3><a asp-area="" asp-controller="Home" asp-action="Contact">Tile Cleaning</a></h3>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <a href="#" class="case-studies">Case Studies</a>
+                                            <a asp-area="" asp-controller="Home" asp-action="Contact" class="case-studies">Contact us for Booking</a>
                                         </div>
                                     </div>
                                 </div>
@@ -59,7 +59,7 @@
                                                     </div>
                                                 </div>
                                             </div>
-                                            <a href="#" class="case-studies">Case Studies</a>
+                                            <a asp-area="" asp-controller="Home" asp-action="Contact" class="case-studies">Contact us for Booking</a>
                                         </div>
                                     </div>
                                 </div>
